Fix flickering on sidebar menu

--- a/front-end/src/modules/Sidebar/Sidebar.scss
+++ b/front-end/src/modules/Sidebar/Sidebar.scss
@@ -3,11 +3,14 @@
 
 $sidebar-width: 250px;
 $transition-duration: 500ms;
+$sidebarColor: $white;
 
 .sidebar{
   overflow: hidden;
   box-shadow: 2px 0px 10px rgba($black, 0.3);
   position: relative;
+  background-color: $sidebarColor;
+  min-height: 100vh;
 
   .sidebar-header{
     width: 100%;
@@ -51,14 +54,12 @@ $transition-duration: 500ms;
     width: 100%;
     height: 100%;
     width: $sidebar-width;
+    display: flex;
+    flex-direction: column;
 
     // SIDE BAR ITEMS ---
     .sidebar-item{
       width: 100%;
-
-      // Initial state before animating in
-      // opacity: 0;
-      // transform: translate3d(0, 20px, 0);
     }
   }
 }
